# smbench

./: .gitignore  Cargo.toml  LICENSE  PROMPTS.md  README.md  decisions.md  pyproject.toml  requirements.txt
compiler/: __init__.py
control/: __init__.py  worker.py
docs/: IMPLEMENTATION_SUMMARY.md  README.md  adjacent-domains-analysis.md  architecture-current.md  architecture-final.md  architecture-v1.1-revised.md  architecture-v1.2.1-implementation-ready.md  architecture-v1.2.2-locked.md  architecture.md  deadlock-audit.md  debugging-playbook.md  github-technology-survey.md  invariant-instrumentation.md  platform-decision-rust-vs-python.md  problem-definition.md  smb-spec-inventory.md  technology-options-matrix.md
docs/archive/: README.md  architecture-review-summary.md  architecture-review.md  architecture.md
executor/: __init__.py
ir/: __init__.py
observability/: __init__.py
runner/: __init__.py
scheduler/: __init__.py
src/: lib.rs
src/backend/: impacket.rs  mod.rs  smbrs.rs
src/compiler/: ir_generator.rs  mod.rs  operation_extractor.rs  pcap_reader.rs  smb_parser.rs  state_machine.rs  tcp_reassembly.rs
src/ir/: mod.rs
src/observability/: mod.rs
src/protocol/: dfs.rs  impacket.rs  mod.rs  ntstatus.rs  rsvd.rs
src/scheduler/: mod.rs
tests/: backend_mode.rs  compiler_tests.rs  e2e_pcap_to_replay.rs  impacket_backend.rs  mock_worker.py  pcap_helpers.rs  protocol_fidelity.rs  scheduler_invariant.rs  scheduler_multi_client.rs  smb_rs_validation.rs  timing_precision.rs  use_case_bug_reproduction.rs  use_case_load_testing.rs
tests/common/: mod.rs
