[package]
name = "smbench"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.48", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
async-trait = "0.1"
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
smb = { path = "vendor/smb-rs/crates/smb", optional = true }

[dev-dependencies]
tokio-test = "0.4"
criterion = "0.5"
smb-fscc = { path = "vendor/smb-rs/crates/smb-fscc" }
smb-msg = { path = "vendor/smb-rs/crates/smb-msg" }
smb-dtyp = { path = "vendor/smb-rs/crates/smb-dtyp" }
smb-rpc = { path = "vendor/smb-rs/crates/smb-rpc" }
futures-util = "0.3"
tokio-util = "0.7"

[features]
default = []
smb-rs-backend = ["smb"]
