[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "smbench"
version = "0.1.0"
description = "Semantic workload compiler and runner for SMB3 protocol load testing"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "smbench contributors"}
]
keywords = ["smb", "smb3", "benchmark", "load-testing", "pcap", "filesystem"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Benchmark",
    "Topic :: System :: Filesystems",
    "Topic :: System :: Networking",
]

dependencies = [
    "impacket>=0.12.0",
    "scapy>=2.5.0",
    "pyshark>=0.6",
    "ldap3>=2.9.1",
    "prometheus-client>=0.20.0",
    "pyyaml>=6.0",
    "python-dateutil>=2.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.23.0",
    "black>=24.0.0",
    "ruff>=0.2.0",
    "mypy>=1.8.0",
]

[project.urls]
Homepage = "https://github.com/SmokerMS/smbench"
Repository = "https://github.com/SmokerMS/smbench"
Issues = "https://github.com/SmokerMS/smbench/issues"

[project.scripts]
smbench-compile = "compiler.main:main"
smbench-run = "runner.main:main"
smbench-provision = "control.main:main"

[tool.black]
line-length = 100
target-version = ['py39']

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
